blinkLed/build/log/idf_py_stderr_output_923913
/home/harris/Documents/Github/ESP32/blinkLed/main/blinkLed.c:5: warning: "LOG_LOCAL_LEVEL" redefined
    5 | #define LOG_LOCAL_LEVEL ESP_LOG_VERBOSE
      | 
In file included from /home/harris/Documents/Github/ESP32/blinkLed/main/blinkLed.c:4:
/home/harris/build/esp-idf/components/log/include/esp_log.h:179: note: this is the location of the previous definition
  179 | #define LOG_LOCAL_LEVEL  CONFIG_LOG_MAXIMUM_LEVEL
      | 
/home/harris/Documents/Github/ESP32/blinkLed/main/blinkLed.c: In function 'app_main':
/home/harris/Documents/Github/ESP32/blinkLed/main/blinkLed.c:9:9: error: implicit declaration of function 'ESPLOG'; did you mean 'ESP_OK'? [-Werror=implicit-function-declaration]
    9 |         ESPLOG(ourTaskName, "Hello, starting up!\n");
      |         ^~~~~~
      |         ESP_OK
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/blinkLed.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4481: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
